# magnus

./: .env  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
src/: main.rs  schema.rs
src/models/auth/: mod.rs
src/models/user/: mod.rs
src/routes/: auth.rs  health.rs  mod.rs  user.rs
