[package]
name = "magnus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies]
diesel = {version = "2.0.0", features = ["postgres"]}
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
dotenvy = "0.15"
